# Quantdom

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  quantdom.spec  requirements.txt  setup.cfg  setup.py
examples/: simple_strategies.py
quantdom/: __init__.py  app.py  cli.py  report_rows.json  ui.py
quantdom/lib/: __init__.py  base.py  charts.py  const.py  loaders.py  performance.py  portfolio.py  strategy.py  tables.py  utils.py
tests/: test_basics.py
